# BACKENDconFLASK

./: .env.example  .gitignore  .pylintrc  Dockerfile  README.md  app.py  cargarDatos.py  package-lock.json  package.json  pyproject.toml  requirements.txt  test_import.py  util.py
.aws/: redema-back-def-revision1.json  redema-back-def-revision2.json  redema-back-https-def-revision2.json  redema-back-https-def-revision4.json
.github/workflows/: aws.yml  docker-image.yml
auth/: routes.py  services.py
aws/: redema-back-revision1.json  redema-back-revision6.json  redema-back-tarea-http-revision1.json
comentarios/: routes.py  services.py
components/categorias/: routes.py
components/comentarios/: routes.py  services.py
components/contactos/: routes.py
components/etiquetas/: routes.py
components/funcionesAdmin/: routes.py  services.py
components/imagenes/: routes.py  services.py
components/notificaciones/: routes.py  services.py
components/pdf/: routes.py  services.py
components/publicaciones/: routes.py  services.py
components/qr/: routes.py  services.py
components/refugios/: routes.py
components/reportes/: routes.py  services.py
components/roles/: routes.py  services.py
components/ubicacion/: routes.py
components/usuarios/: routes.py  services.py
core/: __init__.py  auth_middleware.py  firebase_config.py  models.py
etiquetas/: routes.py
imagenes/: routes.py  services.py
logs/: util.py
migrations/versions/: 07df0ab57939_agregar_estado_a_publicaciones.py  0812eb8f2cf0_mensaje.py  12e9a185667c_agregar_boludez_en_solicitud_de_contacto.py  133e44fd8daa_agregar_soporte_para_reportar_usuarios_.py  147d20cdfafc_saque_tabla_personas.py  1a74006a30f1_agregar_logs.py  23c27706f862_agregar_etiquetas_y_relación_many_to_.py  35b2f50d04f5_merge_roles_y_request_logs.py  4679dd6a7e9e_agregar_id_localidad_a_usuario.py  58af331f6d3a_notificaciones.py  73feef89d929_recuperacion.py  7a00a04a27df_mensaje.py  86a8b7cbd5c8_inicio.py  8fe007cb8e2e_agregar_cascada_en_notificaciones_al_.py  98430544fd4b_agregar_cascada_para_imágenes_y_otras_.py  a4ef56a0e0dd_agregar_cascada_al_borrar_usuario.py  ad8cfcbd1e13_agregar_columna_estado_a_usuario.py  adb96b797ae2_estructura_nueva_de_bd.py  bd28d7ba3e45_mensaje.py  db5975377962_agrego_tabla_roles_y_relacion_con_.py  dffc21f590c2_solicitud_de_mensajes.py  e36cbef62332_hacer_slug_obligatorio_y_único.py  e459fc3998f6_agregar_cascada_a_tablas_relacionadas_.py  e782e394ca2c_agregar_tabla_categoria_y_fk_en_.py  ed2fd56f94c5_agregar_response_time_a_request_log.py  f3e332cbab1a_reportes.py  fc44f01ccadb_reportes_y_notificaciones.py  (+2 more)
notificaciones/: routes.py  services.py
pdf/: routes.py  services.py
publicaciones/: routes.py  services.py
qr/: routes.py  services.py
reportes/: routes.py
ubicacion/: routes.py
usuarios/: routes.py  services.py
(+1 files in other folders)
