[project]
name = "redema-back"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic==1.16.1",
    "annotated-types==0.7.0",
    "anyio==4.11.0",
    "astroid==3.3.11",
    "bidict==0.23.1",
    "blinker==1.9.0",
    "cachecontrol==0.14.3",
    "cachetools==5.5.2",
    "certifi==2025.4.26",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.0",
    "cloudinary==1.44.1",
    "colorama==0.4.6",
    "cryptography==45.0.2",
    "deprecation==2.1.0",
    "dill==0.4.0",
    "dnspython==2.8.0",
    "eventlet==0.40.3",
    "firebase==4.0.1",
    "firebase-admin==6.8.0",
    "flask==3.1.1",
    "flask-cors==6.0.0",
    "flask-migrate==4.1.0",
    "flask-socketio==5.5.1",
    "flask-sqlalchemy==3.1.1",
    "google-api-core==2.25.0rc1",
    "google-api-python-client==2.169.0",
    "google-auth==2.40.2",
    "google-auth-httplib2==0.2.0",
    "google-cloud-core==2.4.3",
    "google-cloud-firestore==2.20.2",
    "google-cloud-storage==3.1.0",
    "google-crc32c==1.7.1",
    "google-resumable-media==2.7.2",
    "googleapis-common-protos==1.70.0",
    "greenlet==3.2.2",
    "grpcio==1.71.0",
    "grpcio-status==1.71.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "hyperframe==6.1.0",
    "idna==3.10",
    "isort==6.0.1",
    "itsdangerous==2.2.0",
    "jinja2==3.1.6",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "mccabe==0.7.0",
    "msgpack==1.1.0",
    "packaging==25.0",
    "pillow==11.3.0",
    "platformdirs==4.4.0",
    "postgrest==2.20.0",
    "proto-plus==1.26.1",
    "protobuf==5.29.4",
    "psycopg2==2.9.10",
    "psycopg2-binary==2.9.10",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycparser==2.22",
    "pydantic==2.11.9",
    "pydantic-core==2.33.2",
    "pyjwt==2.10.1",
    "pylint==3.3.8",
    "pylint-flask==0.6",
    "pylint-plugin-utils==0.9.0",
    "pylint-sqlalchemy==0.3.0",
    "pyparsing==3.2.3",
    "python-dotenv==1.1.1",
    "python-engineio==4.12.2",
    "python-socketio==5.13.0",
    "pytz==2025.2",
    "qrcode==8.2",
    "realtime==2.20.0",
    "reportlab==4.4.2",
    "requests==2.32.3",
    "rsa==4.9.1",
    "simple-websocket==1.1.0",
    "six==1.17.0",
    "slugify==0.0.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.41",
    "storage3==2.20.0",
    "strenum==0.4.15",
    "supabase==2.20.0",
    "supabase-auth==2.20.0",
    "supabase-functions==2.20.0",
    "tomlkit==0.13.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "uritemplate==4.1.1",
    "urllib3==2.4.0",
    "waitress==3.0.2",
    "websockets==15.0.1",
    "werkzeug==3.1.3",
    "wsproto==1.2.0",
]
